# roboreg-dynamic

./: passthrough_consumer.py  static_fields_publisher.py  stereo_ipcai_pipeline_bag.py  stereo_pipeline_live.py  stereo_pipeline_live_handoff.py
cloudxr/: cxr_service.cpp
fp_pipeline/: bag_caminfo_publisher.py  bag_first_caminfo_publisher.py  bag_first_joint_publisher.py  bag_joint_replayer.py  bag_to_qpf2.py  bake_urdf_to_obj.py  fp_bag_compress.launch.py  fp_bag_compress_custom.launch.py  fp_compress_zed_bag.launch.py  fp_live_source_sim.py  fp_offline_publisher.py  fp_pipeline.launch.py  fp_pipeline_live.launch.py  fp_pipeline_quest_qpf2.launch.py  fp_pipeline_quest_qpf2_pynv.launch.py  fp_pipeline_reset.sh  fp_pose_recorder.py  isaac_ros_foundationpose_med7.launch.py  merge_input.yaml  qpf2_receiver.py  qpf2_receiver_pynv.py  stereo_depth_saver.py
overlay/cloudxr-js-samples/simple/src/: main.ts  overlay-module.d.ts  overlay-module.js  roslib.d.ts
passthrough_sim/: bag_h264_source.py  bake_lib.py  bake_node.py  fastdds_shm.xml  fp_pose_recorder.py  fs_input_relay.py  fs_seed.launch.py  gpu_h264_codec.py  isaac_ros_foundationpose_med7.launch.py  passthrough_cloudxr_producer.py  passthrough_pipeline.launch.py  passthrough_rectifier.py  passthrough_ros_bridge.py  quest_zenoh_receiver.py  seed_gate.py  shm_env.sh  stereo_depth_saver.py
xr_frame_layer/: CMakeLists.txt  build.sh  opaque_data_sender.cpp  opaque_data_sender.h  xr_frame_layer.cpp  xr_frame_layer.json
xr_intrinsics_layer/: CMakeLists.txt  build.sh  xr_intrinsics_consumer.py  xr_intrinsics_layer.cpp  xr_intrinsics_layer.json
